# yg2lx-work

./: .gitignore  README.md
cnn_inference/: Makefile  analyze_onnx.py  export_weights.py
cnn_inference/include/: cnn_inference.h  gelu_consts.h  model_meta.h  model_weights.h
cnn_inference/src/: cnn_inference.c
cnn_inference/test/: debug_cnn.c  debug_layers.py  test_cnn.c  verify_accuracy.py
dual_model/: Makefile  export_weights.py  verify_accuracy.py
dual_model/docs/: RA8_SPI_接线与数据连接指南.md  RA8_UART_数据上传格式规范.md  RA8到RZ_G2L数据传输完整教程.md
dual_model/hmi/: CMakeLists.txt  main.cpp
dual_model/hmi/build-arm/: CMakeCache.txt  Makefile  battery_hmi  cmake_install.cmake
dual_model/hmi/build-arm/battery_hmi_autogen/: moc_predefs.h  mocs_compilation.cpp
dual_model/hmi/build-arm/battery_hmi_autogen/3YJK5W5UP7/: qrc_resources.cpp
dual_model/hmi/build-arm/battery_hmi_autogen/OF4FSJ2DWT/: moc_InitScreen.cpp  moc_ModelSelectScreen.cpp  moc_ResultScreen.cpp
dual_model/hmi/build-arm/battery_hmi_autogen/UYX5XTB5RZ/: moc_AlarmIndicator.cpp  moc_AlarmPopup.cpp  moc_ChartWidget.cpp  moc_MainWindow.cpp  moc_StatusPanel.cpp  moc_StorageWidget.cpp
dual_model/hmi/build-host/: CMakeCache.txt  Makefile  cmake_install.cmake
dual_model/hmi/build-host/battery_hmi_autogen/: deps  moc_predefs.h
dual_model/hmi/build-host/battery_hmi_autogen/3YJK5W5UP7/: qrc_resources.cpp
dual_model/hmi/build-host/battery_hmi_autogen/OF4FSJ2DWT/: moc_InitScreen.cpp  moc_InitScreen.cpp.d  moc_ModelSelectScreen.cpp  moc_ModelSelectScreen.cpp.d  moc_ResultScreen.cpp  moc_ResultScreen.cpp.d
dual_model/hmi/build-host/battery_hmi_autogen/UYX5XTB5RZ/: moc_AlarmIndicator.cpp  moc_AlarmIndicator.cpp.d  moc_AlarmPopup.cpp  moc_AlarmPopup.cpp.d  moc_ChartWidget.cpp  moc_ChartWidget.cpp.d  moc_CycleProgressBar.cpp  moc_CycleProgressBar.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_StatusPanel.cpp  moc_StatusPanel.cpp.d  moc_StorageWidget.cpp  moc_StorageWidget.cpp.d
dual_model/hmi/build-host/battery_hmi_autogen/ZXH2KM5ODR/: moc_InferenceWorker.cpp  moc_InferenceWorker.cpp.d
dual_model/hmi/config/: AppConfig.h
dual_model/hmi/data/: DataProvider.h  DemoDataProvider.cpp  DemoDataProvider.h  FileDataProvider.cpp  FileDataProvider.h  SpiDataProvider.cpp  SpiDataProvider.h  UartDataProvider.cpp  UartDataProvider.h
dual_model/hmi/deploy/: hmi-startup.service  serial-trigger.service  splash-boot.service
dual_model/hmi/inference/: CnnPreprocessor.cpp  CnnPreprocessor.h  InferenceEngine.cpp  InferenceEngine.h  SohAccumulator.h
dual_model/hmi/resources/: resources.qrc
dual_model/hmi/resources/style/: industrial.qss
dual_model/hmi/scripts/: generate_demo_data.py  ts2qm.py
dual_model/hmi/threads/: InferenceWorker.cpp  InferenceWorker.h
dual_model/hmi/translations/: battery_hmi_zh_CN.qm  battery_hmi_zh_CN.ts
dual_model/hmi/ui/: AlarmIndicator.cpp  AlarmIndicator.h  AlarmPopup.cpp  AlarmPopup.h  ChartWidget.cpp  ChartWidget.h  CycleProgressBar.cpp  CycleProgressBar.h  MainWindow.cpp  MainWindow.h  StatusPanel.cpp  StatusPanel.h  StorageWidget.cpp  StorageWidget.h
dual_model/hmi/ui/screens/: InitScreen.cpp  InitScreen.h  ModelSelectScreen.cpp  ModelSelectScreen.h  ResultScreen.cpp  ResultScreen.h
dual_model/include/: battery_inference.h  cnn_meta.h  cnn_weights.h  pinn_meta.h  pinn_weights.h  scalers.h
dual_model/src/: battery_infer.c  cnn_inference.c  debug_pinn.c  pinn_inference.c
dual_model/tests/: benchmark_accuracy.py  verify_preprocess  verify_preprocess.cpp
